--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Configuration\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
