--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AutoMapper\" />
+    <Folder Include="AutoMapper\UserAutoMappers\" />
+    <Folder Include="AutoMapper\GenreAutoMappers\" />
+    <Folder Include="AutoMapper\ContextAutoMappers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
