--- a/Norator/appsettings.json
+++ b/Norator/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.;Database=Norator;Trusted_Connection=True;"
+    "Default": "Server=.;Database=Norator1;Trusted_Connection=True;"
   }
 }
